# Homework

Block 1/lesson 10 Cmake/Task 1/: CMakeLists.txt
Block 1/lesson 10 Cmake/Task 2/: CMakeLists.txt  Parallelogram.h  Quadrangle.h  Triangle.cpp  TriangleEquilateral.h  TriangleIsosceles.h  TriangleRight.cpp
Block 1/lesson 11/Task 1/: HIName.cpp
Block 1/lesson 11/Task 3/: ByName.cpp  Leaver.cpp
Block 1/lesson 4/Task 1 address/: Address.sln
Block 1/Курсовая/: AirTransport.cpp  Boots.cpp  Camel.h  CarpetPlane.cpp  Centaur.h  Eagle.h  GroundTransport.cpp  Metod.h  MonsterRace.cpp
Block 2/lesson 1/Task 1  lamda/: CMakeLists.txt  lamda.cpp
lesson 10 Cmake/Task 1/: firstproject.cpp
lesson 10 Cmake/Task 2/: Figure.h  QuadrangleRectangle.cpp  Rhombus.h
lesson 11/Task 1/: CMakeLists.txt
lesson 11/Task 3/: CMakeLists.txt
lesson 3/task 1 calculator/: Calculator.sln
lesson 4/Task 2 address_alphabet/: address_alpabet.sln
lesson 5/Task 1 Figure-1/: Figure-1.sln
lesson 5/Task 2 Figure 2/: Figure-2.sln
lesson 5/Task 3 Figure 3/: Figure 3.sln
lesson 6/Task 1 mathematical functions/: mathematical functions.sln
lesson 6/Task 2 Class/: Class.sln
lesson 7/Task 1 directives/: directives.sln
lesson 7/Task 2 SUB/: SUB.sln
lesson 8/Task 2 Figure/: Hierarchy Class.sln
lesson 9/Task 1 decimals/: Decimals.sln
lesson 9/Task 2 Fraction/: Fraction.sln
Курсовая/: AirTransport.h  Boots.h  Broom.h  CMakeLists.txt  Camel.cpp  CarpetPlane.h  Centaur.cpp  Eagle.cpp  GroundTransport.cpp  GroundTransport.h  Metod.cpp  TurboCamel.cpp  TurboCamel.h
(+93 files in other folders)
