cmake_minimum_required(VERSION 3.22.0)
project(Figures)
add_executable(Figures HierarchyClass.cpp
 Figure.cpp
 Figure.h
 Parallelogram.cpp
 Parallelogram.h
 Quadrangle.cpp
 Quadrangle.h
 QuadrangleRectangle.cpp
 QuadrangleRectangle.h
 Rhombus.cpp
 Rhombus.h
 Square.cpp
 Square.h
 Triangle.cpp
 Triangle.h
 TriangleEquilateral.cpp
 TriangleEquilateral.h
 TriangleIsosceles.cpp
 TriangleIsosceles.h
 TriangleRight.cpp
 TriangleRight.h)